...
        android:layout_marginTop="56dp"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plain_text_input"
        app:layout_constraintVertical_bias="0.007" />

    <Button
        android:id="@+id/add_media_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/Attach"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
    <ImageView
        android:id="@+id/facebook_img"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="294dp"
        android:layout_marginTop="205dp"
        app:layout_constraintEnd_toStartOf="@+id/facebookCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/com_facebook_favicon_blue" />

    <CheckBox
        android:id="@+id/facebookCheck"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/facebook_img"
        app:layout_constraintTop_toTopOf="parent"
        android:enabled="false"/>

    <CheckBox
        android:id="@+id/twitterCheck"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginStart="344dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="25dp"
...
        app:layout_constraintEnd_toStartOf="@+id/twitterCheck"
        app:layout_constraintTop_toTopOf="@+id/twitterCheck"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/twitter_bird_logo_2012_svg" />

    <ImageView
        android:id="@+id/preview_picture"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="60dp"
...
