...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TextViewPostExpanded"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:background="#CDEDFB"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
...
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <ImageView
        android:id="@+id/ImagePostExpanded"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="52dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars" />
    <TextView
        android:id="@+id/FacebookLikes"
        android:layout_width="130dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="46dp"
        android:text="TextView"
        android:textSize="34dp"
...
        android:id="@+id/twlikestext"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/retweets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TwitterLikes" />

    <TextView
        android:id="@+id/TwitterLikes"
        android:layout_width="130dp"
        android:layout_height="46dp"
        android:layout_marginTop="46dp"
...
