...
    <string name="facebook_app_id">171191854853298</string>
    <string name="fb_login_protocol_scheme">fb171191854853298</string>

    <string name="accounts_tab">Accounts tab</string>
    <!--- Warning: The tab names declared here are irrelevant! -->
    <!--- The visible names are set in SwitchAdapter.kt -> tabNames[] -->
    <string name="ACCOUNTS">ACCOUNTS</string>
    <string name="POSTS">POSTS</string>
    <string name="BOOKMARKED">BOOKMARKED</string>
    <!--- -->
    <string name="all_accounts">All Accounts</string>
    <string name="all_posts">All Posts</string>
    <string name="all_bookmarked">All Bookmarked</string>
    <string name="dashboard">Dashboard</string>
...
    <string name="change_theme_title">Enable Dark-Mode</string>


    <!-- Posts strings -->
    <string name="post_message">post message</string>
    <string name="send">send</string>
    <string name="refresh">Refresh</string>
    <string name="Attach">Attach</string>
    <string name="filter_posts_header">Filter Posts</string>
    <string name="filter_by_content_header">Filter by Content</string>
    <string name="filter_by_date_header">Filter by Date</string>
    <string name="filter_by_platform_header">Filter by Platform</string>
    <string name="btn_apply_filter">Apply Filter</string>
...
